# vusion-edge-model

./: .env.example  .gitignore  DEMO_README.md  PROJECT_LOG.md  README.md  REPO_CHECKLIST.md  cleanup.sh  cpu_inference.py  dashboard.tsx  finetune_paligemma.py  manage.py  pitch.html  prep_paligemma_dataset.py  quick_finetuned_inference.py  quick_inference.py  quick_test.py  requirements.txt  train_server.py
agent/: Makefile  docker-compose.yml  finetune.py  init.sql  pyproject.toml
agent/app/: agent.py  config.py  db.py  main.py  models.py  tools.py  ws.py
agent/app/routes/: dashboard.py  events.py  manager.py  workers.py
agent/app/services/: tts.py
archive/: README.md  SETUP.md  deleted_files.txt  prep_paligemma_dataset.py  quick_test.py
detector/: apps.py  gemini_agent.py  inference_utils.py  urls.py  views.py
detector/templates/detector/: index.html
media/videos/: README.md
paligemma_stockout_model/: README.md
static/css/: style.css
static/js/: app.js
static/videos/: README.md
stockout_demo/: asgi.py  settings.py  urls.py  wsgi.py
