[project]
name = "retail-agent"
version = "0.1.0"
description = "On-prem retail store intelligence agent"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    "edge-tts>=6.1.12",
    "openai-whisper>=20231117",
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "peft>=0.11.0",
    "trl>=0.8.0",
    "datasets>=2.19.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "ruff",
    "pytest",
    "httpx",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
include = ["app*"]
[tool.ruff]
line-length = 120
target-version = "py311"
